--- a/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
+++ b/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -107,17 +107,20 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: requests in /home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages (2.22.0)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages (from requests) (2.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages (from requests) (2019.11.28)\n",
       "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages (from requests) (1.25.8)\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages (from requests) (3.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages (from requests) (2019.11.28)\n"
+      "Requirement already satisfied: idna<2.9,>=2.5 in /home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages (from requests) (2.8)\n"
      ]
     }
    ],
    "source": [
     "# First, import the relevant modules\n",
     "!pip install requests\n",
-    "import requests, collections"
+    "import requests\n",
+    "import collections\n",
+    "import json\n",
+    "from statistics import *"
    ]
   },
   {
@@ -131,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -184,17 +187,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = requests.get('https://data.nasdaq.com/api/v3/datasets/FSE/AFX_X', data={\"api_key\": API_KEY, \"start_date\": \"2017-01-01\", \"end_date\": \"2017-12-31\"})\n",
+    "pythonDict = x.json()\n",
+    "data = pythonDict['dataset']['data']\n",
+    "# print(data)\n",
+    "openPrice = []\n",
+    "changePrice = []\n",
+    "dayChange = []\n",
+    "tradeVolume = []\n",
+    "\n",
+    "for x in enumerate(data):\n",
+    "#     print(x)\n",
+    "    openPrice.append(x[1][1])\n",
+    "    changePrice.append(x[1][2]-x[1][3])\n",
+    "    closing = x[1][4]\n",
+    "    tradeVolume.append(x[1][6])\n",
+    "    if(x[0] == 0):\n",
+    "        lastPrice = closing\n",
+    "        continue\n",
+    "    elif(x[0] == 364):\n",
+    "        continue\n",
+    "    else:\n",
+    "        dayChange.append(abs(lastPrice-closing))\n",
+    "        lastPrice = closing\n",
+    "    \n",
+    "    \n",
+    "openPrice = [i for i in openPrice if i is not None] #strip None Values\n",
+    "maxOpen = max(openPrice)\n",
+    "minOpen = min(openPrice)\n",
+    "maxChange = max(changePrice)\n",
+    "maxDayChange = max(dayChange)\n",
+    "avgTrade = mean(tradeVolume)\n",
+    "medianTrade = median(tradeVolume)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53.11\n",
+      "34.0\n",
+      "2.81\n",
+      "2.56\n",
+      "89124.34\n",
+      "76286.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(maxOpen,2))\n",
+    "print(round(minOpen,2))\n",
+    "print(round(maxChange,2))\n",
+    "print(round(maxDayChange,2))\n",
+    "print(round(avgTrade,2))\n",
+    "print(round(medianTrade, 2))"
+   ]
   }
  ],
  "metadata": {
