--- a/mec-5.4.4-json-data-wrangling-mini-project/Mini_Project_Wrangling_Json_Exercise.ipynb
+++ b/mec-5.4.4-json-data-wrangling-mini-project/Mini_Project_Wrangling_Json_Exercise.ipynb
@@ -50509,27 +50509,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "code\n",
-       "11    250\n",
-       "10    216\n",
-       "8     210\n",
-       "2     199\n",
-       "6     168\n",
-       "4     146\n",
-       "7     130\n",
-       "5      77\n",
-       "9      50\n",
-       "1      38\n",
+       "code  name                                        \n",
+       "11    Environment and natural resources management    223\n",
+       "10    Rural development                               202\n",
+       "8     Human development                               197\n",
+       "2     Public sector governance                        184\n",
+       "6     Social protection and risk management           158\n",
+       "4     Financial and private sector development        130\n",
+       "7     Social dev/gender/inclusion                     119\n",
+       "5     Trade and integration                            72\n",
+       "9     Urban development                                47\n",
+       "1     Economic management                              33\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50542,7 +50542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -50550,17 +50550,17 @@
      "output_type": "stream",
      "text": [
       "code  name                                        \n",
-      "11    Environment and natural resources management    223\n",
-      "10    Rural development                               202\n",
-      "8     Human development                               197\n",
-      "2     Public sector governance                        184\n",
-      "6     Social protection and risk management           158\n",
-      "4     Financial and private sector development        130\n",
-      "7     Social dev/gender/inclusion                     119\n",
-      "5     Trade and integration                            72\n",
-      "9     Urban development                                47\n",
-      "1     Economic management                              33\n",
-      "3     Rule of law                                      12\n",
+      "11    Environment and natural resources management    250\n",
+      "10    Rural development                               216\n",
+      "8     Human development                               210\n",
+      "2     Public sector governance                        199\n",
+      "6     Social protection and risk management           168\n",
+      "4     Financial and private sector development        146\n",
+      "7     Social dev/gender/inclusion                     130\n",
+      "5     Trade and integration                            77\n",
+      "9     Urban development                                50\n",
+      "1     Economic management                              38\n",
+      "3     Rule of law                                      15\n",
       "dtype: int64\n"
      ]
     }
@@ -50569,9 +50569,9 @@
     "import numpy as np\n",
     "theme = theme.sort_values([\"code\", \"name\"], ascending=[False,False])\n",
     "theme[theme[\"name\"] == \"\"] = np.nan\n",
-    "theme.fillna(method=\"ffill\")\n",
+    "theme1 = theme.fillna(method=\"ffill\")\n",
     "\n",
-    "print(theme.value_counts())"
+    "print(theme1.value_counts())"
    ]
   }
  ],
