--- a/mec-17.4.1-recommendation-systems-mini-project/Mini_Project_Recommendation_Systems.ipynb
+++ b/mec-17.4.1-recommendation-systems-mini-project/Mini_Project_Recommendation_Systems.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -112,7 +112,130 @@
     "id": "JGWCPwAiP7vv",
     "outputId": "a0320c9e-dfa3-49e3-bf35-2095bce263d8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 3331, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-12-46e33fb1c20d>\", line 24, in <module>\n",
+      "    import keras\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/keras/__init__.py\", line 3, in <module>\n",
+      "    from . import utils\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/keras/utils/__init__.py\", line 6, in <module>\n",
+      "    from . import conv_utils\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/keras/utils/conv_utils.py\", line 9, in <module>\n",
+      "    from .. import backend as K\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/keras/backend/__init__.py\", line 1, in <module>\n",
+      "    from .load_backend import epsilon\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/keras/backend/load_backend.py\", line 89, in <module>\n",
+      "    from .tensorflow_backend import *\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py\", line 6, in <module>\n",
+      "    from tensorflow.python.framework import ops as tf_ops\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/python/framework/ops.py\", line 31, in <module>\n",
+      "    from tensorflow.core.framework import attr_value_pb2\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/core/framework/attr_value_pb2.py\", line 16, in <module>\n",
+      "    from tensorflow.core.framework import tensor_pb2 as tensorflow_dot_core_dot_framework_dot_tensor__pb2\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/core/framework/tensor_pb2.py\", line 16, in <module>\n",
+      "    from tensorflow.core.framework import resource_handle_pb2 as tensorflow_dot_core_dot_framework_dot_resource__handle__pb2\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/core/framework/resource_handle_pb2.py\", line 16, in <module>\n",
+      "    from tensorflow.core.framework import tensor_shape_pb2 as tensorflow_dot_core_dot_framework_dot_tensor__shape__pb2\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/core/framework/tensor_shape_pb2.py\", line 42, in <module>\n",
+      "    serialized_options=None, file=DESCRIPTOR),\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/google/protobuf/descriptor.py\", line 561, in __new__\n",
+      "TypeError: Descriptors cannot not be created directly.\n",
+      "If this call came from a _pb2.py file, your generated code is out of date and must be regenerated with protoc >= 3.19.0.\n",
+      "If you cannot immediately regenerate your protos, some other possible workarounds are:\n",
+      " 1. Downgrade the protobuf package to 3.20.x or lower.\n",
+      " 2. Set PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python (but this will use pure-Python parsing and will be much slower).\n",
+      "\n",
+      "More information: https://developers.google.com/protocol-buffers/docs/news/2022-05-06#python-updates\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 2044, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 1151, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 319, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 353, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/inspect.py\", line 1502, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/inspect.py\", line 1460, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/inspect.py\", line 696, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/inspect.py\", line 733, in getmodule\n",
+      "    if ismodule(module) and hasattr(module, '__file__'):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow/__init__.py\", line 50, in __getattr__\n",
+      "    module = self._load()\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow/__init__.py\", line 44, in _load\n",
+      "    module = _importlib.import_module(self.__name__)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/importlib/__init__.py\", line 127, in import_module\n",
+      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 1006, in _gcd_import\n",
+      "  File \"<frozen importlib._bootstrap>\", line 983, in _find_and_load\n",
+      "  File \"<frozen importlib._bootstrap>\", line 953, in _find_and_load_unlocked\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"<frozen importlib._bootstrap>\", line 1006, in _gcd_import\n",
+      "  File \"<frozen importlib._bootstrap>\", line 983, in _find_and_load\n",
+      "  File \"<frozen importlib._bootstrap>\", line 967, in _find_and_load_unlocked\n",
+      "  File \"<frozen importlib._bootstrap>\", line 677, in _load_unlocked\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/__init__.py\", line 33, in <module>\n",
+      "    from tensorflow._api.v1 import audio\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/_api/v1/audio/__init__.py\", line 10, in <module>\n",
+      "    from tensorflow.python.ops.gen_audio_ops import decode_wav\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/python/ops/gen_audio_ops.py\", line 11, in <module>\n",
+      "    from tensorflow.python.eager import context as _context\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/python/eager/context.py\", line 29, in <module>\n",
+      "    from tensorflow.core.protobuf import config_pb2\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/core/protobuf/config_pb2.py\", line 16, in <module>\n",
+      "    from tensorflow.core.framework import cost_graph_pb2 as tensorflow_dot_core_dot_framework_dot_cost__graph__pb2\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/core/framework/cost_graph_pb2.py\", line 16, in <module>\n",
+      "    from tensorflow.core.framework import tensor_shape_pb2 as tensorflow_dot_core_dot_framework_dot_tensor__shape__pb2\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/tensorflow_core/core/framework/tensor_shape_pb2.py\", line 42, in <module>\n",
+      "    serialized_options=None, file=DESCRIPTOR),\n",
+      "  File \"/home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages/google/protobuf/descriptor.py\", line 561, in __new__\n",
+      "TypeError: Descriptors cannot not be created directly.\n",
+      "If this call came from a _pb2.py file, your generated code is out of date and must be regenerated with protoc >= 3.19.0.\n",
+      "If you cannot immediately regenerate your protos, some other possible workarounds are:\n",
+      " 1. Downgrade the protobuf package to 3.20.x or lower.\n",
+      " 2. Set PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python (but this will use pure-Python parsing and will be much slower).\n",
+      "\n",
+      "More information: https://developers.google.com/protocol-buffers/docs/news/2022-05-06#python-updates\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Descriptors cannot not be created directly.\nIf this call came from a _pb2.py file, your generated code is out of date and must be regenerated with protoc >= 3.19.0.\nIf you cannot immediately regenerate your protos, some other possible workarounds are:\n 1. Downgrade the protobuf package to 3.20.x or lower.\n 2. Set PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python (but this will use pure-Python parsing and will be much slower).\n\nMore information: https://developers.google.com/protocol-buffers/docs/news/2022-05-06#python-updates",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "# To store\\load the data\n",
     "import pandas as pd\n",
@@ -143,6 +266,32 @@
     "\n",
     "# To stack sparse matrices\n",
     "from scipy.sparse import vstack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: protobuf\r\n",
+      "Version: 3.20.1\r\n",
+      "Summary: Protocol Buffers\r\n",
+      "Home-page: https://developers.google.com/protocol-buffers/\r\n",
+      "Author: \r\n",
+      "Author-email: \r\n",
+      "License: BSD-3-Clause\r\n",
+      "Location: /home/ubuntu/anaconda3/envs/mec-miniprojects/lib/python3.7/site-packages\r\n",
+      "Requires: \r\n",
+      "Required-by: tensorboard, tensorflow\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show protobuf"
    ]
   },
   {
@@ -2316,9 +2465,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (MEC Mini-Projects)",
    "language": "python",
-   "name": "python3"
+   "name": "mec-miniprojects"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2330,7 +2479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
